--- a/report/NA07029.PAnno.html
+++ b/report/NA07029.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA07029<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 12:25:17 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA07029<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 23:22:17 2022</p>
     </blockquote>
     
 
@@ -1631,14 +1631,14 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>acenocoumarol</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>acenocoumarol</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>atorvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>azathioprine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>celecoxib</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>doxepin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
@@ -1654,17 +1654,17 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2a</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2b</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>phenytoin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>phenytoin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>pravastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>ribavirin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>siponimod</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
+<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>tamoxifen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>tenoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>warfarin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
@@ -1719,7 +1719,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="6">enflurane</td>
 <td rowspan="6">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192124</td><td>C/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1445400172 target="_blank">1445400172</a></i></td></tr>
@@ -1825,7 +1825,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1154221922 target="_blank">1154221922</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
-<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
+<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
 <tr><td rowspan="6">sevoflurane</td>
 <td rowspan="6">Toxicity</td></tr>
@@ -1859,7 +1859,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>CYP3A4</td><td></td><td>*1/*36</td><td><span class="level-1a1b">1B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183689931 target="_blank">1183689931</a></i></td></tr>
 <tr><td>CYP3A5</td><td></td><td>*1/*3</td><td><span class="level-1a1b">1B</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451241780 target="_blank">1451241780</a></i></td></tr>
 <tr><td>CYP3A5</td><td></td><td>*1/*3</td><td><span class="level-1a1b">1B</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184999911 target="_blank">1184999911</a></i></td></tr>
-<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
+<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
 <tr><td rowspan="2">tamoxifen</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2D6</td><td></td><td>*1/*35</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/982029857 target="_blank">982029857</a></i></td></tr>
