--- a/report/NA11881.PAnno.html
+++ b/report/NA11881.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA11881<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 12:00:39 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA11881<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 23:03:13 2022</p>
     </blockquote>
     
 
@@ -1672,10 +1672,10 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>azathioprine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>celecoxib</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>clopidogrel</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>clopidogrel</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>codeine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
@@ -1687,7 +1687,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>isoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>lansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>lornoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>meloxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>mercaptopurine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1700,10 +1700,10 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>peginterferon alfa-2b</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
 <tr><td>phenytoin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
-<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>ribavirin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1761,7 +1761,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="5">enflurane</td>
 <td rowspan="5">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192170</td><td>T/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183705788 target="_blank">1183705788</a></i></td></tr>
@@ -1821,7 +1821,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451465324 target="_blank">1451465324</a></i></td></tr>
 <td rowspan="2">Metabolism</td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
 <tr><td rowspan="2">meloxicam</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C9</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451092677 target="_blank">1451092677</a></i></td></tr>
@@ -1879,14 +1879,14 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>CYP2C9</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451092541 target="_blank">1451092541</a></i></td></tr>
 <tr><td rowspan="2">pitavastatin</td>
 <td rowspan="2">Metabolism</td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
 <tr><td rowspan="6">pravastatin</td>
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451244740 target="_blank">1451244740</a></i></td></tr>
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>KIF6</td><td>rs20455</td><td>A/G</td><td><span class="level-2a2b">2B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/655384621 target="_blank">655384621</a></i></td></tr>
 <td rowspan="2">Metabolism</td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
 <tr><td rowspan="7">ribavirin</td>
 <td rowspan="7">Efficacy</td></tr>
 <tr><td>IFNL4</td><td>rs12979860</td><td>T/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827862764 target="_blank">827862764</a></i></td></tr>
@@ -1903,7 +1903,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <td rowspan="4">Metabolism</td></tr>
 <tr><td>ABCG2</td><td>rs2231142</td><td>G/G</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*14/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
 <tr><td rowspan="5">sevoflurane</td>
 <td rowspan="5">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192170</td><td>T/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183705788 target="_blank">1183705788</a></i></td></tr>
