--- a/report/NA18544.PAnno.html
+++ b/report/NA18544.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA18544<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 11:59:06 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA18544<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 23:01:53 2022</p>
     </blockquote>
     
 
@@ -1716,7 +1716,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>azathioprine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>celecoxib</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>citalopram</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>citalopram</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>clomipramine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>codeine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1735,7 +1735,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>isoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>lansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>lornoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>meloxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>mercaptopurine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1747,10 +1747,10 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>peginterferon alfa-2b</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
 <tr><td>phenytoin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
-<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>ribavirin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sertraline</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
@@ -1895,7 +1895,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451465324 target="_blank">1451465324</a></i></td></tr>
 <td rowspan="2">Metabolism</td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
 <tr><td rowspan="2">meloxicam</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C9</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451092677 target="_blank">1451092677</a></i></td></tr>
@@ -1957,12 +1957,12 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td rowspan="3">pitavastatin</td>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*15/*37</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1450814813 target="_blank">1450814813</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
 <tr><td rowspan="4">pravastatin</td>
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451244740 target="_blank">1451244740</a></i></td></tr>
 <td rowspan="2">Metabolism</td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
 <tr><td rowspan="7">ribavirin</td>
 <td rowspan="7">Efficacy</td></tr>
 <tr><td>IFNL4</td><td>rs12979860</td><td>C/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183680546 target="_blank">1183680546</a></i></td></tr>
@@ -1976,7 +1976,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451357200 target="_blank">1451357200</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*15/*37</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
 <tr><td rowspan="2">sertraline</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C19</td><td></td><td>*1/*2</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183619004 target="_blank">1183619004</a></i></td></tr>
