--- a/report/NA18952.PAnno.html
+++ b/report/NA18952.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA18952<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 12:33:50 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA18952<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 23:31:19 2022</p>
     </blockquote>
     
 
@@ -1602,7 +1602,7 @@ li a:hover:not(.active) {
 <tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>pravastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>ribavirin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1796,7 +1796,7 @@ li a:hover:not(.active) {
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1154221922 target="_blank">1154221922</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
-<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
+<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
 <tr><td rowspan="9">sevoflurane</td>
 <td rowspan="9">Toxicity</td></tr>
