--- a/report/NA18959.PAnno.html
+++ b/report/NA18959.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA18959<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 12:19:46 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA18959<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 23:17:21 2022</p>
     </blockquote>
     
 
@@ -1595,7 +1595,7 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>acenocoumarol</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>acenocoumarol</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>amitriptyline</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>atorvastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>azathioprine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1608,7 +1608,7 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>fluvastatin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>fluvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>halothane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>ibuprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>irinotecan</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1621,11 +1621,11 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>ondansetron</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2a</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2b</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>phenytoin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>phenytoin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>ribavirin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>siponimod</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1769,7 +1769,7 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1154221922 target="_blank">1154221922</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
-<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
+<tr><td>ABCG2</td><td>rs2231142</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451666660 target="_blank">1451666660</a></i></td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*37/*37</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
 <tr><td rowspan="3">sevoflurane</td>
 <td rowspan="3">Toxicity</td></tr>
