--- a/report/NA19143.PAnno.html
+++ b/report/NA19143.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA19143<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 12:22:20 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA19143<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 23:19:39 2022</p>
     </blockquote>
     
 
@@ -1564,7 +1564,7 @@ li a:hover:not(.active) {
 <tr><td>azathioprine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>halothane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1581,7 +1581,7 @@ li a:hover:not(.active) {
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>warfarin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>warfarin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 </table>
 <h2 id="clinical annotation"><b>Clinical Annotation</b></h2>
 <p class="main_lead">This section lists the clinical annotations on which the phenotype predictions are based.</p>
@@ -1617,7 +1617,7 @@ li a:hover:not(.active) {
 <tr><td>CYP2B6</td><td></td><td>*6/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*6/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>T/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>T/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="8">enflurane</td>
 <td rowspan="8">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192116</td><td>C/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1447676001 target="_blank">1447676001</a></i></td></tr>
