--- a/report/NA19207.PAnno.html
+++ b/report/NA19207.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA19207<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 12:09:51 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA19207<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 23:10:09 2022</p>
     </blockquote>
     
 
@@ -1616,7 +1616,7 @@ Based on current knowledge, it is not recommended to increase the clopidogrel do
 <tr><td>codeine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>desipramine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>escitalopram</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>fluorouracil</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1642,7 +1642,7 @@ Based on current knowledge, it is not recommended to increase the clopidogrel do
 <tr><td>sertraline</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
+<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>tamoxifen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>tenoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>tramadol</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
@@ -1695,7 +1695,7 @@ Based on current knowledge, it is not recommended to increase the clopidogrel do
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="2">enflurane</td>
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>CACNA1S</td><td>rs772226819</td><td>G/G</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451264060 target="_blank">1451264060</a></i></td></tr>
@@ -1791,7 +1791,7 @@ Based on current knowledge, it is not recommended to increase the clopidogrel do
 <td rowspan="4">Metabolism</td></tr>
 <tr><td>CYP3A5</td><td></td><td>*3/*7</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451214480 target="_blank">1451214480</a></i></td></tr>
 <tr><td>CYP3A4</td><td></td><td>*36/*36</td><td><span class="level-1a1b">1B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183689931 target="_blank">1183689931</a></i></td></tr>
-<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
+<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
 <tr><td rowspan="4">tamoxifen</td>
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>CYP2D6</td><td></td><td>*2/*10</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451285240 target="_blank">1451285240</a></i></td></tr>
