--- a/report/HG00276.PAnno.html
+++ b/report/HG00276.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: HG00276<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 12:30:38 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: HG00276<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 23:27:49 2022</p>
     </blockquote>
     
 
@@ -1676,9 +1676,9 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>acenocoumarol</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>acenocoumarol</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>aripiprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>atomoxetine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>atomoxetine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>atorvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>azathioprine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1690,14 +1690,14 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>flecainide</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>fluorouracil</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>fluvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>fluvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>haloperidol</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>halothane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>hydrocodone</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>ibuprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>isoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>lansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>meloxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>mercaptopurine</td><td style="color:#35787F">◎ Normal</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1708,13 +1708,13 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>paroxetine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>peginterferon alfa-2a</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2b</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>phenytoin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>phenytoin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
-<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>ribavirin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
 <tr><td>risperidone</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>siponimod</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
@@ -1856,7 +1856,7 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451465324 target="_blank">1451465324</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678188 target="_blank">1451678188</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
 <tr><td rowspan="2">meloxicam</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C9</td><td></td><td>*1/*2</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451092677 target="_blank">1451092677</a></i></td></tr>
@@ -1916,14 +1916,14 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td rowspan="3">pitavastatin</td>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1450814813 target="_blank">1450814813</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
 <tr><td rowspan="6">pravastatin</td>
 <td rowspan="3">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678460 target="_blank">1451678460</a></i></td></tr>
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451244740 target="_blank">1451244740</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880520 target="_blank">1043880520</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
 <tr><td rowspan="5">ribavirin</td>
 <td rowspan="3">Toxicity</td></tr>
 <tr><td>ITPA</td><td>rs1127354</td><td>C/C</td><td><span class="level-2a2b">2B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1446905691 target="_blank">1446905691</a></i></td></tr>
@@ -1939,7 +1939,7 @@ Of importance, pharmacogenetic-guided dosing should not replace regular INR moni
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451357200 target="_blank">1451357200</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
 <tr><td rowspan="8">sevoflurane</td>
 <td rowspan="8">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192167</td><td>A/A</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183705783 target="_blank">1183705783</a></i></td></tr>
