--- a/report/HG00436.PAnno.html
+++ b/report/HG00436.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: HG00436<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 12:02:55 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: HG00436<br>Biogeographic Group: East Asian (EAS)<br>Report Time: Wed Dec 28 23:04:57 2022</p>
     </blockquote>
     
 
@@ -1553,7 +1553,7 @@ li a:hover:not(.active) {
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>dexlansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>doxepin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
@@ -1639,7 +1639,7 @@ li a:hover:not(.active) {
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="4">enflurane</td>
 <td rowspan="4">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192161</td><td>C/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183705759 target="_blank">1183705759</a></i></td></tr>
