--- a/report/NA07357.PAnno.html
+++ b/report/NA07357.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA07357<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 12:21:58 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA07357<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 23:19:19 2022</p>
     </blockquote>
     
 
@@ -1684,47 +1684,47 @@ It is not known whether it is possible to reduce the dose to such an extent that
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>amitriptyline</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>amitriptyline</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>aripiprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>atomoxetine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>atomoxetine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>atorvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>azathioprine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>capecitabine</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>celecoxib</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>citalopram</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>clomipramine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>clomipramine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>codeine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>desipramine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>desipramine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>efavirenz</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>escitalopram</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>fluorouracil</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>fluvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>fluvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>fluvoxamine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>halothane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>ibuprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>imipramine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
+<tr><td>imipramine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>isoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>lansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>lornoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>lovastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>meloxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>mercaptopurine</td><td style="color:#35787F">◎ Normal</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>metoprolol</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>nortriptyline</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>nortriptyline</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>omeprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>pantoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>peginterferon alfa-2b</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>phenytoin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
-<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>pravastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>ribavirin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>risperidone</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>rosuvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>sertraline</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>simvastatin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
@@ -1883,7 +1883,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451465324 target="_blank">1451465324</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678188 target="_blank">1451678188</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678112 target="_blank">1451678112</a></i></td></tr>
 <tr><td rowspan="2">meloxicam</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C9</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451092677 target="_blank">1451092677</a></i></td></tr>
@@ -1930,7 +1930,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td rowspan="3">pitavastatin</td>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1450814813 target="_blank">1450814813</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678210 target="_blank">1451678210</a></i></td></tr>
 <tr><td rowspan="8">pravastatin</td>
 <td rowspan="3">Toxicity</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451678460 target="_blank">1451678460</a></i></td></tr>
@@ -1939,7 +1939,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>KIF6</td><td>rs20455</td><td>A/G</td><td><span class="level-2a2b">2B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/655384621 target="_blank">655384621</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880520 target="_blank">1043880520</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345293 target="_blank">981345293</a></i></td></tr>
 <tr><td rowspan="2">ribavirin</td>
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>ITPA</td><td>rs7270101</td><td>A/C</td><td><span class="level-2a2b">2B</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1446905703 target="_blank">1446905703</a></i></td></tr>
@@ -1952,7 +1952,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451357200 target="_blank">1451357200</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>SLCO1B1</td><td></td><td>*1/*15</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1043880701 target="_blank">1043880701</a></i></td></tr>
-<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
+<tr><td>SLCO1B1</td><td>rs4149056</td><td>T/C</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981345350 target="_blank">981345350</a></i></td></tr>
 <tr><td rowspan="2">sertraline</td>
 <td rowspan="2">Metabolism</td></tr>
 <tr><td>CYP2C19</td><td></td><td>*2/*17</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183619004 target="_blank">1183619004</a></i></td></tr>
@@ -1988,7 +1988,7 @@ It is not known whether it is possible to reduce the dose to such an extent that
 <tr><td>CYP3A4</td><td></td><td>*1/*1</td><td><span class="level-1a1b">1B</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183689931 target="_blank">1183689931</a></i></td></tr>
 <tr><td>CYP3A5</td><td></td><td>*3/*3</td><td><span class="level-1a1b">1B</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184999911 target="_blank">1184999911</a></i></td></tr>
 <tr><td>CYP3A5</td><td></td><td>*3/*3</td><td><span class="level-1a1b">1B</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451241780 target="_blank">1451241780</a></i></td></tr>
-<tr><td>CYP3A4</td><td>rs4646437</td><td>G/G</td><td><span class="level-2a2b">2A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
+<tr><td>CYP3A4</td><td>rs4646437</td><td>G/G</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
 <tr><td rowspan="4">tamoxifen</td>
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>CYP2D6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451285240 target="_blank">1451285240</a></i></td></tr>
