--- a/report/NA11839.PAnno.html
+++ b/report/NA11839.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA11839<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 12:02:27 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA11839<br>Biogeographic Group: European (EUR)<br>Report Time: Wed Dec 28 23:04:36 2022</p>
     </blockquote>
     
 
@@ -1598,7 +1598,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>acenocoumarol</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>acenocoumarol</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>amitriptyline</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>atorvastatin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>azathioprine</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
@@ -1611,7 +1611,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>fluorouracil</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
-<tr><td>fluvastatin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
+<tr><td>fluvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>halothane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>hydrocodone</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>ibuprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
@@ -1625,7 +1625,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>ondansetron</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2a</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
 <tr><td>peginterferon alfa-2b</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td></tr>
-<tr><td>phenytoin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
+<tr><td>phenytoin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>piroxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>pitavastatin</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>pravastatin</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#BC3837">⤊ Increased</td></tr>
@@ -1638,7 +1638,7 @@ Calculate warfarin dose using a validated pharmacogenetic algorithm [Articles:18
 <tr><td>tamoxifen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>tenoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>tramadol</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>warfarin</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
+<tr><td>warfarin</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#35787F">◎ Normal</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td></tr>
 </table>
 <h2 id="clinical annotation"><b>Clinical Annotation</b></h2>
 <p class="main_lead">This section lists the clinical annotations on which the phenotype predictions are based.</p>
