--- a/report/NA19035.PAnno.html
+++ b/report/NA19035.PAnno.html
@@ -584,7 +584,7 @@ li a:hover:not(.active) {
       An automated clinical pharmacogenomics annotation tool to report drug responses and prescribing recommendations by parsing the germline variants.
     </p>
     <blockquote>
-      <p style="font-size:0.95rem;">Sample ID: NA19035<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 12:01:32 2022</p>
+      <p style="font-size:0.95rem;">Sample ID: NA19035<br>Biogeographic Group: African American/Afro-Caribbean (AAC)<br>Report Time: Wed Dec 28 23:03:54 2022</p>
     </blockquote>
     
 
@@ -1606,14 +1606,14 @@ If a tertiary amine is warranted, utilize therapeutic drug monitoring to guide d
     
 <table id="customer_table" border="1" cellspacing="0">
 <tr><th>Drug</th><th>Toxicity</th><th>Dosage</th><th>Efficacy</th><th>Metabolism</th></tr>
-<tr><td>azathioprine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>azathioprine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>celecoxib</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>citalopram</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
-<tr><td>clopidogrel</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>clopidogrel</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>codeine</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>desflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>desipramine</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>efavirenz</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>enflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>flurbiprofen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>fluvastatin</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
@@ -1624,7 +1624,7 @@ If a tertiary amine is warranted, utilize therapeutic drug monitoring to guide d
 <tr><td>lansoprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>lornoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>meloxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
-<tr><td>mercaptopurine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
+<tr><td>mercaptopurine</td><td style="color:#BC3837">⤊ Increased</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>methoxyflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>nortriptyline</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>omeprazole</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
@@ -1639,7 +1639,7 @@ If a tertiary amine is warranted, utilize therapeutic drug monitoring to guide d
 <tr><td>sertraline</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
 <tr><td>sevoflurane</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
 <tr><td>succinylcholine</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td></tr>
-<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#BC3837">⤊ Increased</td></tr>
+<tr><td>tacrolimus</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td><td style="color:#000000">-</td><td style="color:#563E82">⤋ Decreased</td></tr>
 <tr><td>tamoxifen</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>tenoxicam</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
 <tr><td>tramadol</td><td style="color:#35787F">◎ Normal</td><td style="color:#000000">-</td><td style="color:#000000">-</td><td style="color:#35787F">◎ Normal</td></tr>
@@ -1690,7 +1690,7 @@ If a tertiary amine is warranted, utilize therapeutic drug monitoring to guide d
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451242500 target="_blank">1451242500</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP2B6</td><td></td><td>*1/*6</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1184133833 target="_blank">1184133833</a></i></td></tr>
-<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
+<tr><td>CYP2B6</td><td>rs3745274</td><td>G/T</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/827923032 target="_blank">827923032</a></i></td></tr>
 <tr><td rowspan="2">enflurane</td>
 <td rowspan="2">Toxicity</td></tr>
 <tr><td>RYR1</td><td>rs118192167</td><td>A/A</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1183705783 target="_blank">1183705783</a></i></td></tr>
@@ -1794,7 +1794,7 @@ If a tertiary amine is warranted, utilize therapeutic drug monitoring to guide d
 <tr><td>CYP3A5</td><td></td><td>*1/*7</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/981203719 target="_blank">981203719</a></i></td></tr>
 <td rowspan="3">Metabolism</td></tr>
 <tr><td>CYP3A5</td><td></td><td>*1/*7</td><td><span class="level-1a1b">1A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451214480 target="_blank">1451214480</a></i></td></tr>
-<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#BC3837">⤊ Increased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
+<tr><td>CYP3A4</td><td>rs4646437</td><td>A/A</td><td><span class="level-2a2b">2A</span></td><td style="color:#563E82">⤋ Decreased</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1444686843 target="_blank">1444686843</a></i></td></tr>
 <tr><td rowspan="4">tamoxifen</td>
 <td rowspan="2">Efficacy</td></tr>
 <tr><td>CYP2D6</td><td></td><td>*2/*2</td><td><span class="level-1a1b">1A</span></td><td style="color:#35787F">◎ Normal</td><td><a href=https://www.pharmgkb.org/clinicalAnnotation/1451285240 target="_blank">1451285240</a></i></td></tr>
